--- a/docs/style.css
+++ b/docs/style.css
@@ -1,4 +1,12 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url('fonts/Roboto-Regular.woff2') format('woff2'),
+        url('fonts/Roboto-Regular.woff') format('woff');
+    font-weight: bold;
+}
+
 h1 {
     color: blueviolet;
     font-size: larger;
+    font-family: 'OpenSans', sans-serif;
 }
